update bigxshow name

--- a/public/index.html
+++ b/public/index.html
@@ -20,28 +20,36 @@
     .section {
       margin-bottom: 20px;
     }
+    ol {
+      padding-left: 20px;
+    }
   </style>
 </head>
 <body>
 <h1>Account Deletion & Customer Support</h1>
 
 <div class="section">
-  <h2>How to Delete Your Account</h2>
+  <h2>BIGXSHOW How to Delete Your Account</h2>
   <p>To delete your account from within the app, please follow these steps:</p>
   <ol>
-    <li>Open the app and navigate to the <strong>Settings</strong> menu.</li>
-    <li>Go to <strong>Account</strong> options.</li>
-    <li>Select <strong>Delete Account</strong> and follow the instructions.</li>
+    <li>Open the app and log in to your account.</li>
+    <li>Navigate to <strong>My Page</strong> from the main menu.</li>
+    <li>Go to the <strong>Personal Information</strong> page.</li>
+    <li>Select <strong>Edit Information</strong> and then choose <strong>Delete Account</strong>.</li>
+    <li>Provide the reason for account deletion by entering or selecting an option.</li>
+    <li>Complete the phone number verification process to confirm your identity.</li>
+    <li>Once verified, your account information will be permanently deleted.</li>
   </ol>
-  <p>If you encounter any issues or need further assistance, feel free to reach out to our support team below.</p>
+  <p>If you encounter any issues during this process, please reach out to our support team below.</p>
 </div>
 
 <div class="section">
-  <h2>Contact Customer Support</h2>
+  <h2>Contact Customer BIGXSHOW Support Team</h2>
   <p>If you have any questions or require assistance, you can contact our customer support team:</p>
   <ul>
-    <li>Email: <a href="mailto:support@bigxshop.com">support@bigxshop.com</a></li>
-    <li>Phone: +84 (123) 456-7890</li>
+    <li>Email: <a href="mailto:support@bigxshow.com">support@bigxshow.com</a></li>
+    <li>Phone: +66 (123) 02-123-4999</li>
+    <li>Google Play Store:<a href="https://play.google.com/store/apps/details?id=ai.shopglobal&hl=th">BIGXSHOW</a></li>
   </ul>
   <p>Our support team is available Monday through Friday, 9 AM - 5 PM (local time).</p>
 </div>
